# OpenGL_Hello-Triangle

./: .gitignore  CMakeLists.txt  README.md  ROTATION_VETOR-MATH.txt  camera-direction-calculation.txt  main.cpp  mythoughtsandopinions.txt
base_scenes/: chapter-12_basic-lighting-scene.cpp
exercises/: camera_walking-around-with-zoom-fps-syle.cpp  camera_walking-around-with-zoom-own-lookat-matrix-function.cpp  camera_walking-around-with-zoom.cpp  camera_walking-around.cpp  chapter-12_basic-lighting_material_phong.cpp  chapter-12_basic-lighting_material_phong_exercise-1.cpp  chapter-12_basic-lighting_material_phong_exercise-2.cpp  chapter-12_basic-lighting_phong.cpp  chapter-12_basic-lighting_phong_exercise-1.cpp  chapter-12_basic-lighting_phong_exercise-3.cpp  chapter-12_basic-lighting_phong_exercise-4.cpp  coordinate-system_3d-cube.cpp  coordinate-system_laying-down.cpp  coordinate-system_multiple-3d-cubes.cpp  hello-triangle_color-in-vertice-data.cpp  hello-triangle_color-shifting.cpp  hello-triangle_exercise-1.cpp  hello-triangle_exercise-2.cpp  hello-triangle_exercise-3.cpp  shader-class-test.cpp  shader_exercise-1.cpp  shader_exercise-2.cpp  shader_exercise-3.cpp  texture_exercise-1.cpp  texture_exercise-2.cpp  texture_exercise-3.cpp  texture_exercise-4.cpp  texture_wooden-container.cpp  transformation-learning-1.cpp  transformation-learning-2.cpp  transformation-learning_exercise-1.cpp  transformation-learning_exercise-2.cpp
shaders/: fragment.frag  fragment_3d-scene.frag  fragment_lighting_base.frag  fragment_lighting_gouraud.frag  fragment_lighting_phong.frag  (+21 more)
(+3 files in other folders)
